# lorem-gen

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
lorem_gen/: __init__.py  core.py
tests/: test_lorem_gen.py
